api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: opeco17/api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3030
      - name: nginx
        image: opeco17/api_nginx:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
      nodeSelector:
        type: k8s1
