web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 80
  type: NodePort
