web_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: web
spec:
    rules:
    - host: web
      http: 
        paths: 
        - path: /
          backend:
                serviceName: web
                servicePort: 80
